--- a/projects/zia/terminal.html
+++ b/projects/zia/terminal.html
@@ -62,7 +62,9 @@
     <div class="panel">
         <a href="./index.html" class="headerh1"><h1>Zhifty Investigation Agency</h1></a>
         <div id="terminal"></div>
-        <a href="./terminal.html">Hello</a>
+        <div style="text-align: center; margin-top: 40px; height: 80%;">
+            <embed src="https://codezhifty.github.io/codezhifty/projects/terminal/index.html" type="" style="width: 65%; height: 100%; border-radius: 20px;">
+        </div>
     </div>
 
     <script>
