--- a/projects/audiovisualizer/index.html
+++ b/projects/audiovisualizer/index.html
@@ -267,7 +267,7 @@
         if (e.keyCode == 116) {
             e.preventDefault();
             sessionStorage.removeItem("reload");
-            location.reload();
+            window.reload();
         }
     }
 
