Changed grammar index.html and about.html

--- a/about.html
+++ b/about.html
@@ -98,13 +98,13 @@
 
     <div class="anim-container">
         <span class="googleHomeText">
-            My name is Oscar Stausholm and im 15 years old, attending to a school called<br>
+            My name is Oscar Stausholm and I'm 15 years old, attending to a school called<br>
             high technical exam (HTX), currently studying programming, geographics, biologi<br>
             and robot technologi. My expertise is Javascript and webdev, I also do some<br>
             backend with Firebase and MongoDB/NeDB. 
             <hr class="hr">
             If you like my website then take a look at my <a href="https://www.youtube.com/channel/UC4LcW0lHrIKFIHGQki8qVMg" style="color: white;" target="_blank">Youtube</a> channel.<br>
-            You could also head over to my <a href="https://github.com/CodeZhifty/codezhifty" style="color: white;" target="_blank">Github</a> repo if youre interested<br>
+            You could also head over to my <a href="https://github.com/CodeZhifty/codezhifty" style="color: white;" target="_blank">Github</a> repo if you're interested<br>
             <hr class="hr">
             This repo including this website and all my projects is <a href="https://github.com/CodeZhifty/codezhifty/blob/main/LICENSE" style="color: white;" target="_blank">Copyright</a> claimed!<br>
             Dont try to make money or copy the repo including this website and all my projects.
