--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
     <div class="anim-container">
         <span class="aboutText">
-            CodeZhifty who am i?
+            CodeZhifty who am I?
             <br>
-            Im a programmer currently focused on webdev.
+            I'm a programmer currently focused on webdev.
             <br>
             I mainly do webdev, frontend and backend but also c# and unity.
             <br>
