--- a/projects/terminal/index.html
+++ b/projects/terminal/index.html
@@ -123,6 +123,7 @@
                     terminalDatabase.push("echo text | Display any message");
                     terminalDatabase.push("calc 5 + 5 | Built in calculator");
                     terminalDatabase.push("run alert('text') | Run native javascript code");
+                    terminalDatabase.push("nrplt AB12345 | Check any Danish numberplate");
                     terminalDatabase.push("");
                     const formatTerminalDatabase = terminalDatabase + "";
                     const formattedTerminalDatabase = formatTerminalDatabase.split(",").join("<br>");
