--- a/projects/audiovisualizer/v2/index.html
+++ b/projects/audiovisualizer/v2/index.html
@@ -70,7 +70,7 @@
         .fileButton{
             cursor: pointer;
             border: white solid 5px;
-            background: #00b5b8;
+            background: #6affa5;
             border-radius: 25px;
             padding: 15px;
             font-family: cursive;
@@ -80,7 +80,7 @@
 
         .fileButton:hover{
             color: rgb(179, 179, 179);
-            background: #007577;
+            background: #57d68a;
             border-color: white;
         }
 
@@ -251,6 +251,8 @@
         </div>
 </div>
 
+
+
 <script>
     document.onkeydown = fkey;
     document.onkeypress = fkey;
@@ -296,8 +298,8 @@
                 
                 // style the background
                 var gradient = canvasCtx.createLinearGradient(0,0,0,canvas.height);
-                gradient.addColorStop(0,"rgba(35, 150, " + frequencyData[i] + ", 1)");
-                gradient.addColorStop(1,"rgba(204, 150, " + frequencyData[i] + ", 1)");
+                gradient.addColorStop(0,"rgba(" + frequencyData[i] + ", 255, 100, 1)");
+                gradient.addColorStop(1,"rgba(255, 255, 255, 1)");
                 canvasCtx.fillStyle = gradient;
                 canvasCtx.fillRect(0,0,canvas.width,canvas.height);
             
@@ -330,7 +332,7 @@
         function drawBar(x1, y1, x2, y2, width,frequency){
             //Style bars
             for(var i = 0; i < bars; i++){
-                var lineColor = "rgba(" + frequency + ", " + 200 + ", " + 205 + ")";
+                var lineColor = "#ffffff";
                 canvasCtx.strokeStyle = lineColor;
             }
 
