Changed zia login to firebase

--- a/projects/zia/terminal.html
+++ b/projects/zia/terminal.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZIA</title>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-auth.js"></script>
     <style>
         *{
             margin: 0px;
@@ -68,17 +70,28 @@
     </div>
 
     <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyAI-cXtii8WbqM-LWuJLW4O4DmXNvD3fjQ",
+            authDomain: "zhifty-investigation-agency.firebaseapp.com",
+            projectId: "zhifty-investigation-agency",
+            storageBucket: "zhifty-investigation-agency.appspot.com",
+            messagingSenderId: "834729099624",
+            appId: "1:834729099624:web:1b18d00dfbf7d111ee16dd"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        
         function logout(){
-            sessionStorage.removeItem("agent");
+            firebase.auth().signOut()
         }
 
-
-        if (sessionStorage.getItem("agent") == null) {
-            window.open("./login.html", "_self");
-        }
-        else {
-            document.getElementById("name").innerHTML = sessionStorage.getItem("agent");
-        }
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                document.getElementById("name").innerHTML = "Logged in as " + user.email;
+            } else {
+                window.open("login.html", "_self")
+            }
+        });
     </script>
 </body>
 </html>
