--- a/projects/zia/login.html
+++ b/projects/zia/login.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZIA</title>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-auth.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.18.0/js/md5.js" integrity="sha512-NpfrQEgzOExS1Ax8fjITKrgBFK87lZbBmvWdZk4suiCC4tsHPrTCsulgIA7Z/+CeWhDpEP/f36mNWgZXDKtTAA==" crossorigin="anonymous"></script>
     <style>
         *{
             margin: 0px;
@@ -60,9 +63,9 @@
 <body>
     <div class="loginForm">
         <h1>ZIA</h1>
-        <label for="username">Username</label>
+        <label for="email">Email</label>
         <br>
-        <input type="text" id="username" autocomplete="off">
+        <input type="email" id="email" autocomplete="off">
         <br>
         <br>
         <label for="password">Password</label>
@@ -72,8 +75,7 @@
         <br>
         <button id="login">Login</button>
     </div>
-    
+
     <script src="./login.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.18.0/js/md5.js" integrity="sha512-NpfrQEgzOExS1Ax8fjITKrgBFK87lZbBmvWdZk4suiCC4tsHPrTCsulgIA7Z/+CeWhDpEP/f36mNWgZXDKtTAA==" crossorigin="anonymous"></script>
 </body>
 </html>
